[gd_scene load_steps=16 format=2]

[ext_resource path="res://Recursos/Players/bunny2_ready.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Environment/ground_grass.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Players/bunny2_jump.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Background/bg_layer1.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Background/bg_layer3.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Background/bg_layer2.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Background/bg_layer4.png" type="Texture" id=7]
[ext_resource path="res://Juego/menus/botones/BotonMenuSalir.tscn" type="PackedScene" id=8]
[ext_resource path="res://Juego/menus/botones/BotonMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Recursos/Items/carrot_gold.png" type="Texture" id=10]
[ext_resource path="res://Juego/menus/MenuPrincipal.gd" type="Script" id=11]
[ext_resource path="res://Recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Recursos/Items/carrot.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]
resource_name = "AnimacionMenuPrincipal"
length = 2.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Bunny2Ready:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bunny2Jump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bunny2Jump:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1, 1.5, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 344, 530.5 ), Vector2( 344, 222 ), Vector2( 344, 222 ), Vector2( 344, 530.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bunny2Jump:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 1.6, 1.9, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 296.471, 0.0, 0.0, 180.0, 360.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Carrot:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CarrotGold:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CarrotGold:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.0133522, 0.1, 1.45, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Carrot:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.0133522, 0.1, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.921569, 0.780392, 0.909804, 1 )
font_data = ExtResource( 12 )

[node name="MenuPrincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
nivel_1 = "res://Juego/Niveles/Nivel_1.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.67451, 0.729412, 0.878431, 1 )

[node name="ParallaxBackgroundMenuPrincipal" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2( 0, -350 )

[node name="ParallaxFondo" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxFondo"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="ParallaxNubesLejanas" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesLejanas"]
margin_top = -614.0
margin_right = 2048.0
margin_bottom = 1434.0
texture = ExtResource( 6 )

[node name="ParallaxNubesMedias" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesMedias"]
margin_top = -763.0
margin_right = 2048.0
margin_bottom = 1285.0
texture = ExtResource( 5 )

[node name="ParallaxNubesCercanas" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesCercanas"]
margin_left = 8.0
margin_top = -873.0
margin_right = 2056.0
margin_bottom = 1175.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "AnimacionMenuPrincipal"
anims/AnimacionMenuPrincipal = SubResource( 1 )

[node name="Carrot" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 331, 223 )
texture = ExtResource( 13 )

[node name="CarrotGold" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 331, 223 )
texture = ExtResource( 10 )

[node name="GroundGrass" type="Sprite" parent="."]
position = Vector2( 345, 655 )
scale = Vector2( 0.813158, 0.595745 )
texture = ExtResource( 2 )

[node name="Bunny2Ready" type="Sprite" parent="."]
position = Vector2( 346, 532.5 )
texture = ExtResource( 1 )

[node name="Bunny2Jump" type="Sprite" parent="."]
visible = false
position = Vector2( 344, 530.5 )
rotation = 5.1744
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -536.0
margin_top = -116.0
margin_right = -132.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="BotonJugar" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_right = 404.0
margin_bottom = 104.0
text = "Jugar"

[node name="BotonMenuSalir" parent="VBoxContainer" instance=ExtResource( 8 )]
margin_top = 128.0
margin_right = 404.0
margin_bottom = 232.0

[node name="Panel" type="Panel" parent="."]
margin_left = 658.0
margin_top = 80.0
margin_right = 1243.0
margin_bottom = 172.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.898039, 0.858824, 0.964706, 1 )

[node name="Label" type="Label" parent="Panel"]
modulate = Color( 0.392157, 0.360784, 0.666667, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -30.0
margin_right = 205.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Menu Principal"

[connection signal="pressed" from="VBoxContainer/BotonJugar" to="." method="_on_BotonMenu_pressed"]
